cambios agregamos mas informacion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Bienvenidos</h1>
-    <p>Hola compañeros, este es mi nuevo sitio web, sígueme en Twitter @aschmalbach</p>
+    <p>Hola compañeros, este es mi nuevo sitio web, sígueme en Twitter @aschmalbach <br>No dudes en consultarme</p>
     
 </body>
 </html>
